--- a/Index.HTML
+++ b/Index.HTML
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
-<html></html>
-<head></head>
-<title>Batata</title>
-<meta>
-<head></head>
+<html>
+<head>
+    <title>Batata</title>
+    <meta charset="UTF8">
+    <meta name="viewport" content="width=device-windth, initial-scale=1">
+    <link rel="stylesheet" href="styles.css">
+
+
+
+</head>
+<body>
+
+
+
+
+</body>
+
+
+</html>
