--- a/Index.HTML
+++ b/Index.HTML
@@ -11,6 +11,9 @@
 </head>
 <body>
 
+   <h1> Passeio Aqui </h1> 
+   <img src="img/NOMEdaIMAGEM.png" alt="BREVE EXPLICAÇÃO DA IMAGEM">
+ <section>
 
 
 
