--- a/Index.HTML
+++ b/Index.HTML
@@ -11,11 +11,12 @@
 </head>
 <body>
 
-   <h1> Passeio Aqui </h1> 
-   <img src="img/NOMEdaIMAGEM.png" alt="BREVE EXPLICAÇÃO DA IMAGEM">
- <section>
+ <section class="principal">
+  
+  <h1> Passeio Aqui </h1> 
+  <img src="img/rest2 1.png" alt="BREVE EXPLICAÇÃO DA IMAGEM">
 
-
+</section>
 
 </body>
 
