--- a/Index.HTML
+++ b/Index.HTML
@@ -14,7 +14,14 @@
  <section class="principal">
   
   <h1> Passeio Aqui </h1> 
-  <img src="img/rest2 1.png" alt="BREVE EXPLICAÇÃO DA IMAGEM">
+  <img src="img/p.png" alt="BREVE EXPLICAÇÃO DA IMAGEM">
+  <img src="img/st.png" alt="BREVE EXPLICAÇÃO DA IMAGEM">
+  <img src="img/festa1.png" alt="BREVE EXPLICAÇÃO DA IMAGEM">
+  <img src="img/rest21.png" alt="BREVE EXPLICAÇÃO DA IMAGEM">
+  <img src="img/lazer1.png" alt="BREVE EXPLICAÇÃO DA IMAGEM">
+  <img src="img/lanche1.png" alt="BREVE EXPLICAÇÃO DA IMAGEM">
+  <img src="img/compras1.png" alt="BREVE EXPLICAÇÃO DA IMAGEM">
+  <img src="img/turismo1.png" alt="BREVE EXPLICAÇÃO DA IMAGEM">
 
 </section>
 
