--- a/Index.HTML
+++ b/Index.HTML
@@ -22,7 +22,7 @@
   <img src="img/lanche1.png" alt="BREVE EXPLICAÇÃO DA IMAGEM">
   <img src="img/compras1.png" alt="BREVE EXPLICAÇÃO DA IMAGEM">
   <img src="img/turismo1.png" alt="BREVE EXPLICAÇÃO DA IMAGEM">
-
+  <a href="https://www.google.com/maps/@-24.8559776,-54.3128793,12.94z?entry=ttu" class="container__botao">maps</a>
 </section>
 
 </body>
