--- a/site-main/Index.HTML
+++ b/site-main/Index.HTML
@@ -13,20 +13,41 @@
 
 <body>
 
+  <section class="header">
+  <header>
+    <h1>Trabalho de Programação</h1>
+    <ul>
+    <li>Eduardo Antonio Girotto Padia</li>
+    <li>Escola Humberto de Alencar Castelo Branco</li>
+    </ul>
+    </header>
+  </section>
+
+
  <section class="principal">
+  
   <div>
-  <h1> Passeio Aqui </h1> 
-  <img src="img/p.png" alt="BREVE EXPLICAÇÃO DA IMAGEM">
-  <img src="img/st.png" alt="BREVE EXPLICAÇÃO DA IMAGEM">
-  <img src="img/festa1.png" alt="BREVE EXPLICAÇÃO DA IMAGEM">
-  <img src="img/rest21.png" alt="BREVE EXPLICAÇÃO DA IMAGEM">
-  <img src="img/lazer1.png" alt="BREVE EXPLICAÇÃO DA IMAGEM">
-  <img src="img/lanche1.png" alt="BREVE EXPLICAÇÃO DA IMAGEM">
-  <img src="img/compras1.png" alt="BREVE EXPLICAÇÃO DA IMAGEM">
-  <img src="img/turismo1.png" alt="BREVE EXPLICAÇÃO DA IMAGEM">
-  <a href="https://www.google.com/maps/@-24.8559776,-54.3128793,12.94z?entry=ttu" class="container__botao">maps</a>
-  <a href= "https://www.google.com.br/maps/@-27.5924058,-42.8668225,7z?entry=ttu" class="container__botao botao secudario">spam</a>
-  <p class="container__aviso">sou uma batata</p>
+  <h1> Galeria de Obras de Arte Produzidas Por AI</h1> 
+
+
+  <p class="container__aviso"> Medo, raiva, fome, estes eram sentimentos cotidianos de nossos antepassados casadore-coletores, que, para aliviar suas mentes, começaram a praticar arte. Os desenhos rupesdres, inalguram a relação do ser humano com a arte, tal relação passou por inúmeros peridos históricos, transformando e sendo transformada a cada mudança de pensamento e tecnologia. Na década de 1940 surgi o instrumento que mais abalaria dada relação, o computadore, que munido de inteligências artificias, se torna um artista incansavel com ideias inesgotaveis, colocando em cheque o papel humano neste relacionamento. </p>
+  </div>
+
+  <div>
+  <p class="container__aviso"> Seguem alguns exemplos de imagens produzidas por inteligências artificiais: </p>
+  <img src="ffff/a.png" alt="BREVE EXPLICAÇÃO DA IMAGEM">
+  <img src="ffff/b.png" alt="BREVE EXPLICAÇÃO DA IMAGEM">
+  <img src="ffff/c.webp" alt="BREVE EXPLICAÇÃO DA IMAGEM">
+  <img src="ffff/d.png" alt="BREVE EXPLICAÇÃO DA IMAGEM">
+  <img src="ffff/e.jpg" alt="BREVE EXPLICAÇÃO DA IMAGEM">
+  <img src="ffff/f.webp" alt="BREVE EXPLICAÇÃO DA IMAGEM">
+  <p class="container__aviso">Estes são alguns sites que produzem tais imagens:</p>
+  <a href="https://picsart.com/pt" class="container__botao">-Picsart</a>
+  <a href= "https://www.bing.com/create?toWww=1&redig=16B95E677C4648ABBEDA9032CC12BF39" class="container__botao botaosecudario">-Bing Image Creator</a>
+  <a href="https://beta.dreamstudio.ai/generate" class="container__botao botao3">-Dream Studio</a>
+  <a href="https://leonardo.ai/" class="container__botao botao4">-Leonardo</a>
+  <a href="https://playgroundai.com/" class="container__botao botao5">-Playground</a>
+
 
   </div>
 
