--- a/site-main/Index.HTML
+++ b/site-main/Index.HTML
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -35,7 +37,7 @@
 
   <div>
   <p class="container__aviso"> Seguem alguns exemplos de imagens produzidas por inteligências artificiais: </p>
-  <img src="ffff/a.png" alt="BREVE EXPLICAÇÃO DA IMAGEM">
+  <img src="ffff/a.png" alt="BREVE EXPLICAÇÃO DA IMAGEM" class= "container__imagem">
   <img src="ffff/b.png" alt="BREVE EXPLICAÇÃO DA IMAGEM">
   <img src="ffff/c.webp" alt="BREVE EXPLICAÇÃO DA IMAGEM">
   <img src="ffff/d.png" alt="BREVE EXPLICAÇÃO DA IMAGEM">
@@ -57,3 +59,4 @@
 
 
 </html>
+
